# image-classifier

./: .gitignore  Makefile  Pipfile  mypy.ini  setup.cfg
image_classifier/: classify.py  model.py  train.py
src/image_classifier/: classify.py  cli.py  model.py  model.pyi  train.py
src/tools/: crop.py
