[metadata]
name = image-classifier
version = 0.0.1
author = pillyshi

[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.9
include_package_data = True
install_requires = 
    typed-argument-parser>=1.6.1
    opencv-python>=4.5.1.48
    scikit-learn>=0.24.0
    numpy~=1.18

[options.packages.find]
where = src

[options.package_data]
image_classifier = 
    py.typed
    *.pyi

[options.entry_points]
console_scripts = 
    train = image_classifier.train:main
    classify = image_classifier.classify:main
    crop = tools.crop:main
